src/objects/Merge_History_GLBL__c.object
<CustomObject>
    <description>Capture history for account merges. Created 10/17/2013 by KLorenti, Mavens Consulting</description>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by Workflow used for Integration with External Systems.
Created by J Adams 12/10/2013</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Date_GLBL__c</fullName>
        <description>Date Accounts were Merged. Created 10/17/2013 by KLorenti, Mavens Consulting</description>
        <label>Merge Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Merge_Processed_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a Mercury Merge has been complete.  This will be set post a Mercury merge process has taken place, this would be in addition to the master data merge that has already taken place.  Oliver Dunford 11th April 2014.</description>
        <label>Merge Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Account_ID_GLBL__c</fullName>
        <description>Capture Original Account Id for Merge History. Created 10/17/2013 by KLorenti, Mavens Consulting</description>
        <externalId>true</externalId>
        <label>Original Account Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Type_Code_GLBL__c</fullName>
        <description>Original Type Code. Created 10/17/2013 by KLorenti, Mavens Consulting</description>
        <label>Original Type Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Winning_Id_GLBL__c</fullName>
        <description>Capture Winning Id for Account Merge History. Created 10/17/2013 by KLorent, Mavens Consulting</description>
        <externalId>true</externalId>
        <label>Winning Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Merge History</label>
    <nameField>
        <displayFormat>HIST-{000000}</displayFormat>
        <label>Merge History #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>